# kaggle-heart

./: .gitignore  .pre-commit-config.yaml  README.md  eda.py  pyproject.toml
.kiro/hooks/: activate-venv.kiro.hook  commit-after-task.kiro.hook  sync-structure-docs.kiro.hook
.kiro/specs/heart-disease-eda/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  python-best-practices.md  structure.md  tech.md
eda_outputs/: conclusions.md
playground-series-s6e2/: README.md
src/: __init__.py  eda.py
tests/: test_eda.py
